# Gioco-dell-oca-pazza

./: .gitignore  Carta.cpp  Carta.hpp  Colors.cpp  Colors.hpp  Dado.cpp  DomandaCarta.cpp  DomandaCarta.hpp  Domande.cpp  Domande.hpp  Fermounturno.hpp  Fortuna.cpp  Fortuna.hpp  GOP  Game.cpp  Game.hpp  LICENSE  Mazzo.cpp  Mazzo.hpp  Prova  README.md  Relazione.md  RilanciaDado.cpp  RilanciaDado.hpp  Scambia.cpp  Scambia.hpp  TornaInizio.cpp  TornaInizio.hpp  casella.cpp  casella.hpp  giocatore copia.cpp  giocatore.cpp  giocatore.hpp  main.cpp  tabellone.cpp  tabellone.hpp
src/: CMakeLists.txt  Carta.cpp  Carta.hpp  Domanda.cpp  Domanda.h  Fermounturno.cpp  Fermounturno.h  Gioco.cpp  Gioco.hpp  Mazzo.cpp  Mazzo.h  RilanciaDado.cpp  RilanciaDado.hpp  TornaInizio.cpp  TornaInizio.h  giocatore.cpp  giocatore.h  main.cpp
src/Carta/: Card.cpp  Card.h  Carta.cpp  Carta.hpp  Gioco.hpp  RilanciaDado.cpp  RilanciaDado.h  ScambiaPosizione.cpp  ScambiaPosizione.h  ScambiaPosizione.hpp
src/Casella/: casella.cpp  casella.hpp
src/Colors/: Colors.cpp  Colors.h  Colors.hpp
src/Dado/: Dado.cpp
src/Domande/: Domande.cpp  Domande.hpp
src/Effetti Carte/: DomandaCarta.cpp  DomandaCarta.h  DomandaCarta.hpp  Fermounturno.cpp  Fermounturno.h  Fermounturno.hpp  Fortuna.cpp  Fortuna.hpp  RilanciaDado.cpp  RilanciaDado.hpp  Scambia.cpp  Scambia.hpp  TornaInizio.cpp  TornaInizio.h  TornaInizio.hpp
src/Game/: Game.cpp  Game.hpp  game.cpp
src/Mazzo/: Mazzo.cpp  Mazzo.h  Mazzo.hpp
src/Tabellone/: tabellone.cpp  tabellone.hpp
src/Utils/: utils.cpp  utils.hpp
src/dado/: Dado.cpp  (+1 more)
(+3 files in other folders)
